--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
