--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_lab1_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab1">
+        <activity android:name=".activities.AddMovieActivity" />
+        <activity
+            android:name=".activities.DisplayMovieActivity"
+            />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
