--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lab1">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_lab1"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_lab1_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab1">
+        android:theme="@style/Theme.Lab1"
+        android:usesCleartextTraffic="true">
         <activity android:name=".activities.AddMovieActivity" />
         <activity
             android:name=".activities.DisplayMovieActivity"
